# STM32CMakeTemplate

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: STM32_CI-CD.yml
Src/: main.c
Startup/: startup_stm32h723zgtx.s
cmake/: install-stm32-model.cmake  project-configuration.cmake  project_configuration.cmake
docs/: tutorial.md
inc/app/: app_version.h  app_version.h.in
src/app/: app_main.c  main.c
startup/: stm32h723zgtx_FLASH.ld  stm32h7_FLASH_Example.ld
tests/unity_cmock/: CMakeLists.txt  test.c
